--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TypeScript Tutorial</title>
+    <title>Typescript - Financial Log</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -42,6 +42,6 @@
       >
     </footer>
 
-    <script src="sandbox.js"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
